--- a/Access_App_Exercise_Sean/View/GitHubUsersListCell.xib
+++ b/Access_App_Exercise_Sean/View/GitHubUsersListCell.xib
@@ -9,37 +9,37 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GitHubUsersListCell" rowHeight="236" id="mRe-i0-G8Z" customClass="GitHubUsersListCell" customModule="Access_App_Exercise_Sean" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="236"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GitHubUsersListCell" rowHeight="100" id="mRe-i0-G8Z" customClass="GitHubUsersListCell" customModule="Access_App_Exercise_Sean" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mRe-i0-G8Z" id="B5Y-bz-sfb">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="236"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Vd-00-gOc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="236"/>
+                        <rect key="frame" x="4" y="0.0" width="406" height="90"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t6f-qR-9or" userLabel="avatar">
-                                <rect key="frame" x="20" y="88" width="60" height="60"/>
+                                <rect key="frame" x="10" y="10" width="70" height="70"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="60" id="WLd-5z-3dm"/>
+                                    <constraint firstAttribute="height" constant="70" id="aze-Wy-fNm"/>
                                     <constraint firstAttribute="width" secondItem="t6f-qR-9or" secondAttribute="height" multiplier="1:1" id="zPo-tp-ffs"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vQX-4f-FDi" userLabel="nameWrapper">
-                                <rect key="frame" x="100" y="105.5" width="294" height="25"/>
+                                <rect key="frame" x="100" y="32.5" width="286" height="25"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zb5-z5-o49" userLabel="name">
-                                        <rect key="frame" x="0.0" y="0.0" width="294" height="20"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="286" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="zC7-1q-IdM"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <color key="textColor" red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cz5-Dd-lmR" userLabel="jobTitle">
-                                        <rect key="frame" x="0.0" y="25" width="294" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="25" width="286" height="0.0"/>
                                         <constraints>
                                             <constraint firstAttribute="height" id="WHL-MN-Tnk"/>
                                         </constraints>
@@ -64,16 +64,16 @@
                         <constraints>
                             <constraint firstItem="vQX-4f-FDi" firstAttribute="leading" secondItem="t6f-qR-9or" secondAttribute="trailing" constant="20" id="JXC-Hi-UhC"/>
                             <constraint firstAttribute="trailing" secondItem="vQX-4f-FDi" secondAttribute="trailing" constant="20" id="Qci-LE-kw8"/>
-                            <constraint firstItem="t6f-qR-9or" firstAttribute="leading" secondItem="6Vd-00-gOc" secondAttribute="leading" constant="20" id="b63-Sb-eSP"/>
+                            <constraint firstItem="t6f-qR-9or" firstAttribute="leading" secondItem="6Vd-00-gOc" secondAttribute="leading" constant="10" id="b63-Sb-eSP"/>
                             <constraint firstItem="vQX-4f-FDi" firstAttribute="centerY" secondItem="t6f-qR-9or" secondAttribute="centerY" id="gmX-Pc-EMr"/>
                             <constraint firstItem="t6f-qR-9or" firstAttribute="centerY" secondItem="6Vd-00-gOc" secondAttribute="centerY" id="oog-rn-u2r"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="6Vd-00-gOc" firstAttribute="centerY" secondItem="B5Y-bz-sfb" secondAttribute="centerY" id="Sqs-az-GW7"/>
-                    <constraint firstItem="6Vd-00-gOc" firstAttribute="height" secondItem="B5Y-bz-sfb" secondAttribute="height" id="gNY-Px-Zh0"/>
-                    <constraint firstItem="6Vd-00-gOc" firstAttribute="width" secondItem="B5Y-bz-sfb" secondAttribute="width" id="vOV-T8-nBL"/>
+                    <constraint firstItem="6Vd-00-gOc" firstAttribute="top" secondItem="B5Y-bz-sfb" secondAttribute="top" id="tgd-f7-OcA"/>
+                    <constraint firstItem="6Vd-00-gOc" firstAttribute="width" secondItem="B5Y-bz-sfb" secondAttribute="width" constant="-8" id="vOV-T8-nBL"/>
+                    <constraint firstAttribute="bottom" secondItem="6Vd-00-gOc" secondAttribute="bottom" constant="10" id="wcd-A2-LgF"/>
                     <constraint firstItem="6Vd-00-gOc" firstAttribute="centerX" secondItem="B5Y-bz-sfb" secondAttribute="centerX" id="yAf-8i-VfJ"/>
                 </constraints>
             </tableViewCellContentView>
@@ -83,8 +83,9 @@
                 <outlet property="jobTitleLabelHeightConstraint" destination="WHL-MN-Tnk" id="vKI-gU-bii"/>
                 <outlet property="jobTitleLabelTopDistanceConstraint" destination="bv3-nk-amw" id="Pji-CN-9C7"/>
                 <outlet property="nameLabel" destination="Zb5-z5-o49" id="HDV-rg-y6T"/>
+                <outlet property="wrapper" destination="6Vd-00-gOc" id="JfN-4z-zUc"/>
             </connections>
-            <point key="canvasLocation" x="111.59420289855073" y="-6.0267857142857144"/>
+            <point key="canvasLocation" x="-151" y="-26"/>
         </tableViewCell>
     </objects>
 </document>
